<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/item_settings"
        android:title="@string/item_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/item_logout"
        android:title="@string/item_logout"
        android:orderInCategory="200"
        app:showAsAction="never"/>

    <item android:id="@+id/item_search" android:title="@string/item_search"
        android:orderInCategory="300" app:showAsAction="always"
        android:icon="@drawable/ic_search" />

    <item android:id="@+id/item_add" android:title="@string/item_add"
        android:orderInCategory="400" app:showAsAction="always"
        android:icon="@drawable/ic_person_add" />

</menu>