<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.poturno.poturnochat.activity.InfoActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/txt_app_name"
        android:textColor="@color/colorBlack"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/txt_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_by"
        android:layout_below="@+id/txt_app_name"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txt_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/txt_company_name"
        android:textColor="@color/colorBlack"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txt_company"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_version"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/txt_info"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/txt_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_credit"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txt_info"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/txt_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_credit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/txt_iago"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/txt_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_name1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/txt_vitor"
        android:textColor="@color/colorBlack" />
</RelativeLayout>
