<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:background="@color/colorPrimary"
    android:padding="20px"
    tools:context="com.poturno.poturnochat.activity.LoginActivity">

    <ImageView
        android:id="@+id/img_login_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_chat" />

    <EditText
        android:id="@+id/edit_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/txt_hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_login_email"
        android:ems="10"
        android:hint="@string/txt_hint_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_login_password"
        android:layout_marginTop="20dp"
        android:text="@string/btn_login"
        android:textSize="15dp"
        android:theme="@style/btnPattern"
        tools:text="@string/btn_login" />

    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="openSignup"
        android:text="@string/txt_signup"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txt_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/txt_forgot"
        android:textColor="@android:color/white"
        android:textSize="20dp" />


</android.widget.RelativeLayout>
